# radar-bgt60

./: .gitignore  CMakeLists.txt  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  dir_000002_000005.html  dir_000002_000009.html  dir_000003_000005.html  dir_000003_000009.html  dir_000004_000005.html  dir_000004_000006.html  dir_000005_000001.html  dir_000005_000009.html  dir_000006_000009.html  dir_000007_000005.html  dir_000007_000009.html  dir_000008_000009.html  dir_000009_000001.html  dir_000009_000005.html  dir_000010_000005.html  dir_000010_000008.html  dir_0a55b8d447cb1cec0bb2b289bcc4f1dd.html  dir_0a55b8d447cb1cec0bb2b289bcc4f1dd_dep.map  dir_0a55b8d447cb1cec0bb2b289bcc4f1dd_dep.md5  dir_1637b38f44cddc7958b383951b5bb6ac.html  dir_1637b38f44cddc7958b383951b5bb6ac_dep.map  dir_1637b38f44cddc7958b383951b5bb6ac_dep.md5  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5752cadd8276ecfd63d9b924f2a4d4b5.html  dir_5752cadd8276ecfd63d9b924f2a4d4b5_dep.map  dir_5752cadd8276ecfd63d9b924f2a4d4b5_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7e83d1792d529f4aa7126ac7e0b3b699.html  dir_8de486edec05588ba5107ed7a495ddd5.html  dir_8de486edec05588ba5107ed7a495ddd5_dep.map  (+53 more)
.github/workflows/: doxygen_gh.yml
d0/d59/: classBgt60Rpi__inherit__graph.md5
d0/d94/: bgt60-pal-gpio-rpi_8hpp__dep__incl.map  bgt60-pal-gpio-rpi_8hpp__dep__incl.md5
d0/d9b/: group__platfIno.html  group__platfIno.map  group__platfIno.md5
d0/d9c/: bgt60-pal-timer-ino_8hpp__dep__incl.map  bgt60-pal-timer-ino_8hpp__dep__incl.md5
d0/da1/: group__bgt60ino.html  group__bgt60ino.js  group__bgt60ino.map  group__bgt60ino.md5
d1/d07/: bgt60-ino_8hpp__incl.map  bgt60-ino_8hpp__incl.md5
d1/d16/: bgt60-conf-opts_8hpp.html  bgt60-conf-opts_8hpp_source.html
d1/d76/: group__bgt60rpi.html  group__bgt60rpi.js  group__bgt60rpi.map  group__bgt60rpi.md5
d1/d7f/: bgt60-rpi_8cpp.html
d1/d80/: bgt60_8hpp__dep__incl.map  bgt60_8hpp__dep__incl.md5
d1/db7/: classGPIORpi__inherit__graph.map  classGPIORpi__inherit__graph.md5
d1/de4/: bgt60-pal-gpio-rpi_8cpp__incl.map  bgt60-pal-gpio-rpi_8cpp__incl.md5
d1/df0/: bgt60-types_8hpp__dep__incl.map  bgt60-types_8hpp__dep__incl.md5
d2/d1d/: group__rpiApi.html  group__rpiApi.js  group__rpiApi.map  group__rpiApi.md5  group__rpiApi_gafd78583715bddf3fc7936823d8513ab5_cgraph.map  group__rpiApi_gafd78583715bddf3fc7936823d8513ab5_cgraph.md5
d2/d28/: bgt60-pal-gpio-ino_8hpp.html  bgt60-pal-gpio-ino_8hpp.js  bgt60-pal-gpio-ino_8hpp_source.html
d2/d86/: bgt60-conf-dfl_8hpp__incl.map  bgt60-conf-dfl_8hpp__incl.md5
d2/d97/: bgt60_8cpp.html
d2/df8/: group__defs_8dox.html
d3/d0a/: classsetup_1_1CMakeBuild__inherit__graph.map
d3/d18/: bgt60-ino_8hpp.html  bgt60-ino_8hpp_source.html
d3/d24/: bgt60-ino_8hpp__dep__incl.map  bgt60-ino_8hpp__dep__incl.md5
d3/d33/: bgt60-pal-gpio-ino_8cpp.html
d3/d57/: bgt60-logger_8hpp.html  bgt60-logger_8hpp.js  bgt60-logger_8hpp_source.html
d3/d5c/: bgt60-logger_8hpp__dep__incl.map  bgt60-logger_8hpp__dep__incl.md5
d3/d5d/: group__pal.html  group__pal.js  group__pal.map  group__pal.md5
d3/dbc/: bgt60-pal-timer_8hpp__dep__incl.map  bgt60-pal-timer_8hpp__dep__incl.md5
d4/d54/: bgt60-pybind_8cpp__incl.map  bgt60-pybind_8cpp__incl.md5
d4/d73/: bgt60-pal-gpio-rpi_8hpp__incl.map  bgt60-pal-gpio-rpi_8hpp__incl.md5
d4/d89/: group__rpiPal.html  group__rpiPal.js  group__rpiPal.map  group__rpiPal.md5
d4/d8e/: bgt60-platf-ino_8hpp__incl.map  bgt60-platf-ino_8hpp__incl.md5
d4/dad/: bgt60-conf_8hpp__incl.map  bgt60-conf_8hpp__incl.md5  bgt60-rpi_8cpp__incl.map  bgt60-rpi_8cpp__incl.md5
d5/dc3/: classBgt60Ino__inherit__graph.map  classBgt60Ino__inherit__graph.md5
d5/df1/: bgt60-pal-gpio_8hpp__incl.map  bgt60-pal-gpio_8hpp__incl.md5
d6/d09/: bgt60-pal-gpio-ino_8hpp__incl.map  bgt60-pal-gpio-ino_8hpp__incl.md5
d6/d14/: bgt60-conf_8hpp.html  bgt60-conf_8hpp.js  bgt60-conf_8hpp_source.html
d6/d44/: bgt60-logger_8hpp__incl.map  bgt60-logger_8hpp__incl.md5
d6/ddb/: bgt60-conf-dfl_8hpp.html  bgt60-conf-dfl_8hpp.js  bgt60-conf-dfl_8hpp_source.html
d6/df3/: bgt60-rpi_8hpp__incl.map  bgt60-rpi_8hpp__incl.md5
d7/d3e/: classBgt60__inherit__graph.map  (+1 more)
da/d01/: group__inoPal.js  (+7 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+42 more)
src/: bgt60-ino.hpp  bgt60-platf-ino.hpp
src/framework/raspberrypi/: CMakeLists.txt  MANIFEST.in  install_requirements.sh  makefile  setup.py
src/framework/raspberrypi/examples/: bgt60-DirDetection-Int.cpp  bgt60-DirDetection.cpp  bgt60-MotionDetection-Int.cpp  bgt60-MotionDetection.cpp  dirDetection-Int.cpp  dirDetection.cpp  directionDetection.cpp  interruptMode.cpp  motionDetection-Int.cpp  motionDetection.cpp
src/framework/raspberrypi/examples_py/: directionDetection.py  interruptMode.py  interruptMode2.py  motionDetection.py
src/framework/raspberrypi/pal/: bgt60-pal-gpio-rpi.cpp  bgt60-pal-gpio-rpi.hpp
src/framework/raspberrypi/wrapper/: bgt60-pybind.cpp  bgt60-pybind.hpp  bgt60-rpi.cpp  bgt60-rpi.hpp
test/unit/: CMakeLists.txt
(+167 files in other folders)
